# CHANGELOG UPDATES

## 1.94

* The "phobos_admin_format" API function has been modified to be able to send
multiple format requests in a single call. The medium id provided thus becomes
an array of medium ids, and the length of that array is added as a parameter.

## 1.93

* The "simple" layout is no longer available. It cannot be used through the CLI
and will not be recognized in the API anymore. Instead, an alias has been
provided in the default template.conf, emulating the "simple" layout behaviour.
The layout used is "raid1", with a replica count set to 1.